# nfe-brasil

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  docker-compose.yml  release-please-config.json  server.json
mcp-server/: Dockerfile  README.md  mkdocs.yml  pyproject.toml
mcp-server/examples/: cnpj_lookup.py  django_integracao.py
mcp-server/src/nfe_brasil/: __init__.py  api.py  sdk.py  server.py
mcp-server/src/nfe_brasil/_core/: config.py  http.py  logging.py
mcp-server/src/nfe_brasil/agentic/: __init__.py  compliance.py  nfe.py  reforma.py  schemas.py  sped.py  supplier.py
mcp-server/src/nfe_brasil/bcb/: __init__.py  _tools.py  client.py  schemas.py  tools.py
mcp-server/src/nfe_brasil/cep/: _tools.py  client.py  tools.py
mcp-server/src/nfe_brasil/certidoes/: client.py
mcp-server/src/nfe_brasil/cnae/: _tools.py  client.py  tools.py
mcp-server/src/nfe_brasil/cnpj/: client.py  tools.py
mcp-server/src/nfe_brasil/cte/: __init__.py  schemas.py  tools.py
mcp-server/src/nfe_brasil/empresa/: _tools.py  client.py  schemas.py  tools.py
mcp-server/src/nfe_brasil/ibge/: _tools.py  client.py  tools.py
mcp-server/src/nfe_brasil/importacao/: __init__.py  _tools.py  schemas.py  tools.py
mcp-server/src/nfe_brasil/mdf_e/: __init__.py  schemas.py  tools.py
mcp-server/src/nfe_brasil/mei/: _tools.py  client.py  tools.py
mcp-server/src/nfe_brasil/nfce/: __init__.py  schemas.py  tools.py
mcp-server/src/nfe_brasil/nfe/: assinatura.py  client.py  danfe.py  distribuicao.py  documento.py  schemas.py  tools.py  xml_parser.py
mcp-server/src/nfe_brasil/nfse/: circuit_breaker.py  client.py  tools.py
mcp-server/src/nfe_brasil/shared/: http_client.py  validators.py
mcp-server/src/nfe_brasil/simples/: client.py  schemas.py
mcp-server/src/nfe_brasil/sped/: tools.py
mcp-server/src/nfe_brasil/tabelas/: __init__.py  _tools.py  loader.py  schemas.py  tools.py
mcp-server/src/nfe_brasil/tabelas/data/: tabelas_fiscais.db
mcp-server/tests/: conftest.py  test_agentic.py  test_api.py  test_bcb.py  test_cep.py  test_certidoes.py  test_cli.py  test_cnae.py  test_cnpj.py  test_cnpj_client.py  test_core_config.py  test_core_errors.py  test_core_http.py  test_core_logging.py  test_cpf.py  test_empresa.py  test_http_client.py  test_ibge.py  test_importacao.py  test_lote_c_tools.py  test_mei.py  test_nfe.py  test_nfe_assinatura.py  test_nfe_danfe.py  test_nfe_distribuicao.py  test_nfe_documento.py  test_nfe_reforma_tributaria.py  test_nfe_xml_parser.py  test_nfse.py  test_nfse_circuit_breaker.py  test_nfse_nacional.py  test_nfse_schemas.py  test_rate_limiter.py  test_reforma_normalizacao.py  test_reforma_simulacao.py  test_schemas.py  test_simples.py  test_sped.py  test_sped_valores_numericos.py  test_tabelas.py  (+1 more)
shared/docs/: codigos-retorno-sefaz.md  contingencia.md  contributing.md  gen_api_pages.py  index.md  positioning.md  prazos-legais.md  roadmap-v0.2.md
shared/docs/agentic/: index.md  supplier.md
shared/docs/getting-started/: deploy.md  install.md  quickstart.md
shared/docs/interfaces/: nodejs.md  rest-api.md
shared/docs/marketing/: awesome-entries.md  blog-launch-v0.2.md  blog-post-en.md  blog-post-pt.md  linkedin-post-pt.md  x-thread-pt.md
shared/docs/modules/: index.md
shared/scripts/: backup-xml-email.py  build_tabelas_db.py  check_release_metadata.py  organizar-xmls.py
whatsapp-bot/: .env.example  Dockerfile
whatsapp-bot/bot/: nfe_handler.py
whatsapp-bot/bridge/: cloud_api.py  evolution_webhook.py
(+5 files in other folders)
