[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfe-brasil"
version = "1.0.0"
description = "MCP Server + WhatsApp Bot para Notas Fiscais Brasileiras. NF-e, NFS-e, CT-e, MDF-e, NFC-e, SPED, eSocial, Reforma Tributária IBS/CBS. Zero API key."
authors = [
    { name = "Liniker", email = "linikers@hotmail.com" },
    { name = "Nikolas de Hor", email = "nikolas@dehorlabs.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "mcp",
    "model-context-protocol",
    "nfe",
    "nota-fiscal",
    "nfse",
    "ct-e",
    "mdf-e",
    "nfce",
    "sped",
    "sefaz",
    "whatsapp",
    "brasil",
    "fiscal",
    "danfe",
    "reforma-tributaria",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "lxml>=6.1.0",
    "python-dateutil>=2.9.0.post0",
    "tenacity>=9.1.4",
    "cachetools>=7.0.5",
    "aiolimiter>=1.2.1",
    "structlog>=25.5.0",
    "pydantic-settings>=2.14.2",
    "typer>=0.25.1",
    "fastapi>=0.138.0",
    "uvicorn>=0.42.0",
    "brazilfiscalreport==1.0.0",
    "signxml>=4.5.1",
    "cryptography>=48.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.18",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
nfe-brasil = "nfe_brasil.server:main"
nfe-cli = "nfe_brasil.cli:main"
nfe-api = "nfe_brasil.api:run"

[project.urls]
Homepage = "https://github.com/linikers/nfe-brasil"
Repository = "https://github.com/linikers/nfe-brasil"
Issues = "https://github.com/linikers/nfe-brasil/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nfe_brasil"]
include = ["src/nfe_brasil/tabelas/data/*.db"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nfe_brasil"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "nfe_brasil.server",
    "nfe_brasil.bcb._tools",
    "nfe_brasil.cep._tools",
    "nfe_brasil.cnae._tools",
    "nfe_brasil.empresa._tools",
    "nfe_brasil.ibge._tools",
    "nfe_brasil.mei._tools",
    "nfe_brasil.tabelas._tools",
    "nfe_brasil.importacao._tools",
]
disallow_untyped_decorators = false
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.4",
    "pymdown-extensions>=10.21.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "types-cachetools>=2026.5.18",
]
